# basicpitch.cpp

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md
ort-model/: model.ort  model.required_operators_and_types.config  model.required_operators_and_types.with_runtime_opt.config  model.with_runtime_opt.ort
ort-model/model/: model.ort.c
scripts/: build-ort-linux.sh  build-ort-mac.sh  build-ort-wasm.sh  convert-model-to-ort.sh  python_inference.py  requirements.txt
src/: basicpitch.hpp  midi_notes.cpp  ort_inference.cpp
src_cli/: CMakeLists.txt  basicpitch.cpp
src_wasm/: CMakeLists.txt  basicpitch.cpp
web/: app.js  basicpitch.js  basicpitch.wasm  index.html  worker.js
